crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLR1722_sys_exit_alias_15.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLR1722 [*] Use `sys.exit()` instead of `exit`
 --> sys_exit_alias_15.py:6:1
4 | else:
5 |     code = 1
6 | exit(code)
  | ^^^^
help: Replace `exit` with `sys.exit()`
  |
1 + import sys
2 | success = True
--------------------------------------------------------------------------------
6 |     code = 1
  - exit(code)
7 + sys.exit(code)
  |
note: This is an unsafe fix and may change runtime behavior
