crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLR1722_sys_exit_alias_2.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLR1722 [*] Use `sys.exit()` instead of `exit`
 --> sys_exit_alias_2.py:3:1
  |
1 | import sys as sys2
2 |
3 | exit(0)
  | ^^^^
4 | quit(0)
help: Replace `exit` with `sys.exit()`
  |
2 |
  - exit(0)
3 + sys2.exit(0)
4 | quit(0)
note: This is an unsafe fix and may change runtime behavior

PLR1722 [*] Use `sys.exit()` instead of `quit`
 --> sys_exit_alias_2.py:4:1
3 | exit(0)
4 | quit(0)
  | ^^^^
help: Replace `quit` with `sys.exit()`
  |
3 | exit(0)
  - quit(0)
4 + sys2.exit(0)
5 |
  |
note: This is an unsafe fix and may change runtime behavior

PLR1722 [*] Use `sys.exit()` instead of `exit`
 --> sys_exit_alias_2.py:8:5
  |
7 | def main():
8 |     exit(1)
  |     ^^^^
9 |     quit(1)
help: Replace `exit` with `sys.exit()`
  |
7 | def main():
  -     exit(1)
8 +     sys2.exit(1)
9 |     quit(1)
note: This is an unsafe fix and may change runtime behavior

PLR1722 [*] Use `sys.exit()` instead of `quit`
 --> sys_exit_alias_2.py:9:5
7 | def main():
8 |     exit(1)
9 |     quit(1)
  |     ^^^^
help: Replace `quit` with `sys.exit()`
  |
8 |     exit(1)
  -     quit(1)
9 +     sys2.exit(1)
  |
note: This is an unsafe fix and may change runtime behavior
